# clothing-sale-alert-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-scan.yml
config/: sites.yaml
src/: analyzer.py  config.py  emailer.py  fetcher.py  main.py  schemas.py
