[project]
name = "sale-finder"
version = "0.1.0"
description = "Daily email digest of sitewide sales and heavily-discounted items in your sizes."
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.8.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0.0",
    "resend>=2.0",
]

[tool.uv]
package = false
